--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="animations.css">
+    <link href="bower_components/angular-hero/angular-hero.css" rel="stylesheet" />
     <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
@@ -27,12 +28,12 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-hero/angular-hero.js"></script>
     <script src="app.js"></script>
     <script src="view1/view1.js"></script>
     <script src="view2/view2.js"></script>
     <script src="view3/view3.js"></script>
     <script src="view4/view4.js"></script>
     <script src="components/contacts-service.js"></script>
-    <script src="animations/hero-transition.js"></script>
 </body>
 </html>
